--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
-<!DOCTYPE html>
 <html>
 <body>
 
-<h1>My First Web Page</h1>
-<p>My first paragraph.</p>
+<h1>Swakkhar Shatabda</h1>
+<p>যুগান্তরের ঘূর্ণিপাকে.</p>
 
 <script>
-window.alert(5 + 6);
+window.alert("Hello World! Swakkhar Shatabda!!!");
 </script>
 
 </body>
