--- a/java.html
+++ b/java.html
@@ -21,7 +21,7 @@ Room: 104 Email: swakkhar@cse.uiu.ac.bd Phone: 01776195310<br>
 
 
 <p><b>Theory Course Schedule</b> <br>
-Week 1: Introduction to Java Language <a href="https://www.dropbox.com/s/ijahi3ye5jjrkfn/lecture01.pdf?dl=0">slides</a><br>
+Week 1: Introduction to Java Language <a href="https://www.dropbox.com/s/ijahi3ye5jjrkfn/lecture01.pdf?dl=0">lecture 1 slides</a><br>
 Week 2: Classes and Objects<br>
 Week 3: More on OOP<br>
 Week 4: Inheritence <br>
