--- a/java.html
+++ b/java.html
@@ -23,7 +23,7 @@ Sunday, Tuesday 11:15 AM - 12:40 PM Room 105
 
 
 <p><b>Theory Course Schedule</b> <br>
-Week 1: Introduction to Java Language <a href="https://www.dropbox.com/s/ijahi3ye5jjrkfn/lecture01.pdf?dl=0">lecture 1 slides</a><br>
+Week 1: Introduction to Java Language <a href="https://www.dropbox.com/s/ijahi3ye5jjrkfn/lecture01.pdf?dl=0">Lecture 1 slides</a> <a href="https://www.dropbox.com/s/ww8t1s3w4pk3pen/lecture02.pdf?dl=0">Lecture 2 slides</a><br>
 Week 2: Classes and Objects<br>
 Week 3: More on OOP<br>
 Week 4: Inheritence <br>
