--- a/cbb.html
+++ b/cbb.html
@@ -12,31 +12,40 @@ Department of CSE, United International University <br>
 Room: 104 Email: swakkhar@cse.uiu.ac.bd Phone: 01776195310<br>
 <p>
 <b>Class Time</b><br>
-Friday, 3:30PM - 6:30 PM
+Friday, 3:30PM - 6:30 PM Room # 105
 <br>
 
 <p><b>Books</b><br>
-1. Java: The Complete Reference, Herbert Schildt, 9th Edition
-<a href="https://www.dropbox.com/s/jdqne6zh7vn8r8u/Java_The_Complete_Reference_Ninth_Edition.pdf?dl=0"> download link </a> <br>
-2. How to program Java, Deitel and Deitel, 10th Edition (Early Objects version)
-<a href="https://www.dropbox.com/s/80b5mxk2t94k80c/Paul-Deitel-Harvey-Deitel-Java-How-To-Program-10th-Edition.pdf?dl=0"> download link </a> <br>
+1. Introduction to Bioinformatics Algorithms
+<a href="https://www.dropbox.com/s/c5kbg4lemq6t29k/introduction.to.bioinformatics.algorithms.pdf?dl=0"> download link </a> <br>
+2. Cartoon Guide to Genetics
+<a href="https://drive.google.com/open?id=0B8PVD2E6RiteRXlHX0pmbVJqZW8"> download link </a> <br>
 
 
-<p><b>Theory Course Schedule</b> <br>
+<p><b>Course Schedule</b> <br>
 Week 1: Molecular Biology Primer <br>
-Week 2: Classes and Objects<br>
-Week 3: More on OOP<br>
-Week 4: Inheritence <br>
-Week 5: Polymorphism <br>
-Week 6: GUI <br>
-Week 7: Exception Handling <br>
-Week 8: Concurrency <br>
-Week 9: Socket Programming <br>
-Week 10: I/O <br>
-Week 11: Collections <br>
-Week 12: Review <br>
-Outline <a href="https://www.dropbox.com/s/iywj7z30lzyu5pr/outline_csi211.pdf?dl=0"> Download Link </a> 
-<p><b></b>
+Week 2: Genome Assembly<br>
+Week 3: Finding Hidden Messages<br>
+Week 4: Regulatory Motifs <br>
+Week 5: Structure Prediction <br>
+Week 6: Peptide Sequencing <br>
+Week 7: Genome Rearrangement <br>
+Week 8: PPI Networks <br>
+Week 9: Sequence Alignment <br>
+Week 10: Phylogeny <br>
+Week 11: Hidden Markov Models <br>
+Week 12: Machine Learning Algorithms <br>
+
+
+<p><b>Grading</b>
+1. Class Attendance - 10%<br>
+2. Project (presentation+report) - 20% + 30%<br> 
+3. Final Exam - 40%<br>
+
+
+<p><b>Topics for Project/Report</b>
+1. Read papers () <br>
+2. Run Experiments (BLAST, UCI, PDB, GenBank, etc) <br>
 
 </body>
 </html> 
