--- a/cbb.html
+++ b/cbb.html
@@ -43,7 +43,7 @@ Week 12: Machine Learning Algorithms <br>
 3. Final Exam - 40%<br>
 
 
-<p><b>Topics for Project/Report</b>
+<p><b>Topics for Project/Report</b><br>
 1. Read papers () <br>
 2. Run Experiments (BLAST, UCI, PDB, GenBank, etc) <br>
 
