--- a/cbb.html
+++ b/cbb.html
@@ -47,6 +47,10 @@ Week 12: Machine Learning Algorithms <br>
 1. Read papers () <br>
 2. Run Experiments (BLAST, UCI, PDB, GenBank, etc) <br>
 
+
+<p> How to read a scientific paper? <a href="https://www.elsevier.com/connect/infographic-how-to-read-a-scientific-paper">infographic</a><br>
+<p><a href="https://www.dropbox.com/s/1ysdvyxx498660w/00.ten%20rules%20for%20literature%20review.pdf?dl=0">10 rules for literature review</a><br>
+<p><a href="https://www.dropbox.com/s/xmujqi5uabxe1l0/00.%20why.pdf?dl=0">Why you want to be a computational biologist?</a><br>
 </body>
 </html> 
 
