--- a/cbb.html
+++ b/cbb.html
@@ -23,7 +23,7 @@ Friday, 3:30PM - 6:30 PM Room # 105
 
 
 <p><b>Course Schedule</b> <br>
-Week 1: Molecular Biology Primer <br>
+Week 1: Molecular Biology Primer <a href="http://www.math.ucsd.edu/~pcompeau/Ch03_Molecular_Biology_Primer_Edited.pdf">slides</a> <br>
 Week 2: Genome Assembly<br>
 Week 3: Finding Hidden Messages<br>
 Week 4: Regulatory Motifs <br>
