slides added lecture 2

--- a/cbb.html
+++ b/cbb.html
@@ -25,7 +25,7 @@ Friday, 3:30PM - 6:30 PM Room # 105
 <p><b>Course Schedule</b> <br>
 Week 1: Molecular Biology Primer <a href="http://www.math.ucsd.edu/~pcompeau/Ch03_Molecular_Biology_Primer_Edited.pdf">slides</a> <br>
 Week 2: Genome Assembly <a href="http://www.nature.com/nbt/journal/v29/n11/full/nbt.2023.html">paper</a> <a href="https://www.dropbox.com/s/o5wjugo7v04lmm1/genomeassembly.pdf?dl=0">slides</a><br> 
-Week 3: Finding Hidden Messages <a href="http://nar.oxfordjournals.org/content/32/13/3781.full">paper</a> <a href="https://www.dropbox.com/s/q5ityvdqksfjia7/hiddenmsg.pdf?dl=0">slides</a> Presentation by Jayed<br>
+Week 3: Finding Hidden Messages <a href="http://nar.oxfordjournals.org/content/32/13/3781.full">paper</a> <a href="https://www.dropbox.com/s/q5ityvdqksfjia7/hiddenmsg.pdf?dl=0">slides</a> <b>Presentation by Jayed</b><br>
 Week 4: Peptide Sequencing <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC3216106/pdf/cmb.2011.0158.pdf">paper</a> <br>
 Week 5: Structure Prediction <br>
 Week 6: Regulatory Motifs <br>
