--- a/cbb.html
+++ b/cbb.html
@@ -51,6 +51,9 @@ Week 12: Machine Learning Algorithms <br>
 <p> How to read a scientific paper? <a href="https://www.elsevier.com/connect/infographic-how-to-read-a-scientific-paper">infographic</a><br>
 <p><a href="https://www.dropbox.com/s/1ysdvyxx498660w/00.ten%20rules%20for%20literature%20review.pdf?dl=0">10 rules for literature review</a><br>
 <p><a href="https://www.dropbox.com/s/xmujqi5uabxe1l0/00.%20why.pdf?dl=0">Why you want to be a computational biologist?</a><br>
+
+A sample report <a href="https://www.dropbox.com/s/s463p4l5l8cnna0/reprotCBB.pdf?dl=0"> report.pdf </a>
+
 </body>
 </html> 
 
