clustering slide link fixed

--- a/cbb.html
+++ b/cbb.html
@@ -42,7 +42,7 @@ Week 12: Machine Learning Algorithms <br>
 2. Project (presentation+report) - 20% + 30%<br> 
 3. Final Exam - 40%<br>
 
-Sample mid question <a href="https://www.dropbox.com/s/pfqrppwitp5imr8/finalexam01.pdf?dl=0"> final </a>
+Sample question <a href="https://www.dropbox.com/s/d4uz9grxac98q2q/midexam01.pdf?dl=0"> mid </a> <a href="https://www.dropbox.com/s/pfqrppwitp5imr8/finalexam01.pdf?dl=0"> final </a>
 
 <p><b>Topics for Project/Report</b><br>
 1. Read papers () <br>
