--- a/java.html
+++ b/java.html
@@ -28,7 +28,7 @@ Section C Monday Wednesday, 8:30 AM - 9:50 AM Room#103<br>
 5. Final Exam - 40%<br>
 
 <p><b>Course Schedule</b> <br>
-Week 1: Introduction to Java <a href="https://www.dropbox.com/s/ijahi3ye5jjrkfn/lecture01.pdf?dl=0"> Lecture 1 </a> <a href="https://www.dropbox.com/s/cv7fy6nzh69cx89/sample%20code.zip?dl=0">codes</a><br>
+Week 1: Introduction to Java [<a href="https://www.dropbox.com/s/ijahi3ye5jjrkfn/lecture01.pdf?dl=0"> Lecture 1 </a>] [<a href="https://www.dropbox.com/s/cv7fy6nzh69cx89/sample%20code.zip?dl=0">codes</a>]<br>
 Week 2: Encapsulation<br> 
 Week 3: Inheritence<br>
 Week 4: Polymorphism <br>
