--- a/ai.html
+++ b/ai.html
@@ -29,7 +29,7 @@ Section B Monday Wednesday, 2:10 PM - 3:30 PM Room#206<br>
 5. Final Exam - 40%<br>
 
 <p><b>Course Schedule</b> <br>
-Week 1: Introduction, Searching Agents <br>
+Week 1: Introduction <a href="https://www.dropbox.com/s/gfuhzvp42xptyct/lecture01.pdf?dl=0">slides</a>, Searching Agents <br>
 Week 2: Classical Search<br> 
 Week 3: <b>Class Test 1</b>, Incomplete Search<br>
 Week 4: Incomplete Search <br>
