--- a/fi.html
+++ b/fi.html
@@ -34,6 +34,7 @@ Week 10: Regression <br>
 Week 11: Neural Networks <br>
 Week 12: Clustering and Dimensionality reduction <br>
 
+Sample Questions <a href="https://www.dropbox.com/s/xj76qr9ps1watff/questions.pdf?dl=0">link</a>
 
 <p><b>Grading</b><br>
 1. Class Attendance - 10%<br>
