--- a/fi.html
+++ b/fi.html
@@ -22,7 +22,7 @@ Saturday, 3:30PM - 6:30 PM Room # 103
 
 <p><b>Course Schedule</b> <br>
 Week 1: Introduction, Probability<br>
-Week 2: Naive Bayesian Network <a href="https://www.dropbox.com/s/tqvc3yads6auxh0/01.bankruptcy%20prediction.pdf?dl=0">paper</a><br> 
+Week 2: Naive Bayesian Network <a href="https://www.dropbox.com/s/tqvc3yads6auxh0/01.bankruptcy%20prediction.pdf?dl=0">paper</a> <a href="https://www.dropbox.com/s/ok6tdak7x1qzct9/bayesian.pdf?dl=0">slides</a><br> 
 Week 3: Learning Bayesian Network<br>
 Week 4: Investment Science <br>
 Week 5: Sensityvity Analysis<br>
