--- a/java.html
+++ b/java.html
@@ -27,6 +27,8 @@ Section C Monday Wednesday, 8:30 AM - 9:50 AM Room#103<br>
 4. Mid Exam - 30%<br>
 5. Final Exam - 40%<br>
 
+All marks <a href="https://www.dropbox.com/s/tvikma3103btkf7/Object-Oriented%20Programming%20Section%20C.xlsx?dl=0">Excel File</a>
+
 <p><b>Course Schedule</b> <br>
 Week 1: Introduction to Java [<a href="https://www.dropbox.com/s/ijahi3ye5jjrkfn/lecture01.pdf?dl=0"> Lecture 1 </a>] [<a href="https://www.dropbox.com/s/cv7fy6nzh69cx89/sample%20code.zip?dl=0">codes</a>]<br>
 Week 2: Encapsulation<br> 
