--- a/ai.html
+++ b/ai.html
@@ -34,7 +34,7 @@ Week 2: Classical Search <a href="https://www.dropbox.com/s/wp8g5j77jxxh66y/Info
 Week 3: <b>Class Test 1</b>, Incomplete Search<br>
 Week 4: Incomplete Search <br>
 Week 5: Adverserial Search, <b>Class test 2</b> <a href="https://www.dropbox.com/s/by13p4dpoxaen21/Lecture%206%20--%20Adversarial%20Search.pptx?dl=0"> slides </a> <br>
-Week 6: Markov Decision Process <a href="https://www.dropbox.com/s/8ax6w5fdg8o7nvn/MDP.pptx?dl=0">slides</a><br>
+Week 6: Markov Decision Process <a href="https://www.dropbox.com/s/8ax6w5fdg8o7nvn/MDP.pptx?dl=0">slides</a> <a href="https://www.dropbox.com/s/ymtrlcd936b4nt2/midexam01.pdf?dl=0">sample question</a><br>
 Week 7: Probabilistic Agents <br>
 Week 8: Naive Bayesian Classifier, <b>Class Test 3</b><br>
 Week 9: Decision Trees, K-Means Clustering <br>
