--- a/ai.html
+++ b/ai.html
@@ -43,7 +43,7 @@ Week 11: Neural Networks <br>
 Week 12: Logical Agents, <b>Class Test 5</b> <br>
 
 CT questions <a href="https://www.dropbox.com/s/ttcub60uyzr2fw5/ct.zip?dl=0">link</a>
-
+Sample Mid Question <a href="https://www.dropbox.com/s/711crjdswqgkr0b/midexam01prev.pdf?dl=0">link</a>
 
 </body>
 </html> 
