--- a/fi.html
+++ b/fi.html
@@ -24,15 +24,15 @@ Saturday, 3:30PM - 6:30 PM Room # 103
 Week 1: Introduction, Probability<br>
 Week 2: Naive Bayesian Network <a href="https://www.dropbox.com/s/tqvc3yads6auxh0/01.bankruptcy%20prediction.pdf?dl=0">[paper1]</a> <a href="https://www.dropbox.com/s/ok6tdak7x1qzct9/bayesian.pdf?dl=0">slides</a><br> 
 Week 3: Decision Tree <a href="https://www.dropbox.com/s/7ikisngbt41owkz/02.%20financtial%20ration.pdf?dl=0">[paper2]</a> <a href="https://www.dropbox.com/s/5u0i37sujvn62hp/03.%20stock%20trading.pdf?dl=0">[paper3]</a><br>
-Week 4: Investment Science <br>
-Week 5: Sensityvity Analysis<br>
-Week 6: Venture Capital Decision Making <br>
-Week 7: Bankruptcy Prediction<br>
-Week 8: Collaborative Filtering <br>
+Week 4: Linear Regression <br>
+Week 5: Multi-variate Linear Regression, Perceptrons<br>
+Week 6: Artificial Neural Networks <a href="https://www.dropbox.com/s/umsqyeh3sj46cu7/ANN.ppt?dl=0">ANN Slides</a href="https://www.dropbox.com/sh/3eoi6lv6n2wy1ts/AAB1Xr_9y3YYDDUtw1cS7ABga?dl=0"> <a>papers</a> <br>
+Week 7: Clustering and Dimensionality reduction<br>
+Week 8: K-NN and other algorithms <br>
 Week 9: Targeted Advertising <br>
-Week 10: Regression <br>
-Week 11: Neural Networks <br>
-Week 12: Clustering and Dimensionality reduction <br>
+Week 10: A-priori Algorithm <br>
+Week 11: Support Vector Machines <br>
+Week 12: Collaborative Filtering  <br>
 
 Sample Questions <a href="https://www.dropbox.com/s/xj76qr9ps1watff/questions.pdf?dl=0">link</a>
 
