--- a/fi.html
+++ b/fi.html
@@ -26,7 +26,7 @@ Week 2: Naive Bayesian Network <a href="https://www.dropbox.com/s/tqvc3yads6auxh
 Week 3: Decision Tree <a href="https://www.dropbox.com/s/7ikisngbt41owkz/02.%20financtial%20ration.pdf?dl=0">[paper2]</a> <a href="https://www.dropbox.com/s/5u0i37sujvn62hp/03.%20stock%20trading.pdf?dl=0">[paper3]</a><br>
 Week 4: Linear Regression <br>
 Week 5: Multi-variate Linear Regression, Perceptrons<br>
-Week 6: Artificial Neural Networks <a href="https://www.dropbox.com/s/umsqyeh3sj46cu7/ANN.ppt?dl=0">ANN Slides</a href="https://www.dropbox.com/sh/3eoi6lv6n2wy1ts/AAB1Xr_9y3YYDDUtw1cS7ABga?dl=0"> <a>papers</a> <br>
+Week 6: Artificial Neural Networks <a href="https://www.dropbox.com/s/umsqyeh3sj46cu7/ANN.ppt?dl=0">ANN Slides</a> <a href="https://www.dropbox.com/sh/3eoi6lv6n2wy1ts/AAB1Xr_9y3YYDDUtw1cS7ABga?dl=0"> papers</a> <br>
 Week 7: Clustering and Dimensionality reduction<br>
 Week 8: K-NN and other algorithms <br>
 Week 9: Targeted Advertising <br>
