--- a/ai.html
+++ b/ai.html
@@ -37,7 +37,7 @@ Week 5: Adverserial Search, <b>Class test 2</b> <a href="https://www.dropbox.com
 Week 6: Markov Decision Process <a href="https://www.dropbox.com/s/8ax6w5fdg8o7nvn/MDP.pptx?dl=0">slides</a> <a href="https://www.dropbox.com/s/ymtrlcd936b4nt2/midexam01.pdf?dl=0">sample question</a><br>
 Week 7: Probabilistic Agents <br>
 Week 8: Naive Bayesian Classifier, <b>Class Test 3</b><br>
-Week 9: Decision Trees, K-Means Clustering <br>
+Week 9: Decision Trees, K-NN <a href="https://www.dropbox.com/s/l4oquuow2rcn8nc/k-nn.ppt?dl=0">slides</a> <br>
 Week 10: Regression Models, <b>Class Test 4</b>  <br>
 Week 11: Neural Networks <br>
 Week 12: Logical Agents, <b>Class Test 5</b> <br>
