--- a/fi.html
+++ b/fi.html
@@ -32,7 +32,7 @@ Week 8: K-NN and other algorithms <br>
 Week 9: Targeted Advertising <br>
 Week 10: A-priori Algorithm <br>
 Week 11: Support Vector Machines <br>
-Week 12: Collaborative Filtering  <br>
+Week 12: Collaborative Filtering <a href="https://www.dropbox.com/s/l4oquuow2rcn8nc/k-nn.ppt?dl=0">slides of knn</a> <br>
 
 Sample Questions <a href="https://www.dropbox.com/s/xj76qr9ps1watff/questions.pdf?dl=0">link</a>
 
