--- a/ai.html
+++ b/ai.html
@@ -39,11 +39,14 @@ Week 7: Probabilistic Agents <br>
 Week 8: Naive Bayesian Classifier, <b>Class Test 3</b><br>
 Week 9: Decision Trees, K-NN <a href="https://www.dropbox.com/s/l4oquuow2rcn8nc/k-nn.ppt?dl=0">slides</a> <br>
 Week 10: Regression Models, <b>Class Test 4</b>  <br>
-Week 11: Neural Networks <br>
+Week 11: Neural Networks <a href="https://www.dropbox.com/s/umsqyeh3sj46cu7/ANN.ppt?dl=0">ANN Slide</a> <br>
 Week 12: Logical Agents, <b>Class Test 5</b> <br>
 
 CT questions <a href="https://www.dropbox.com/s/ttcub60uyzr2fw5/ct.zip?dl=0">link</a>
 Sample Mid Question <a href="https://www.dropbox.com/s/711crjdswqgkr0b/midexam01prev.pdf?dl=0">link</a>
+<br>
+Assignment <a hreaf="https://www.dropbox.com/s/4mz60ahkdsmlbqo/finalexam01.pdf?dl=0">Question Link</a>
+
 
 </body>
 </html> 
