--- a/ai.html
+++ b/ai.html
@@ -45,7 +45,7 @@ Week 12: Logical Agents, <b>Class Test 5</b> <br>
 CT questions <a href="https://www.dropbox.com/s/ttcub60uyzr2fw5/ct.zip?dl=0">link</a>
 Sample Mid Question <a href="https://www.dropbox.com/s/711crjdswqgkr0b/midexam01prev.pdf?dl=0">link</a>
 <br>
-Assignment <a hreaf="https://www.dropbox.com/s/4mz60ahkdsmlbqo/finalexam01.pdf?dl=0">Question Link</a>
+Assignment <a href="https://www.dropbox.com/s/4mz60ahkdsmlbqo/finalexam01.pdf?dl=0">Question Link</a>
 
 
 </body>
