--- a/ai.html
+++ b/ai.html
@@ -32,7 +32,7 @@ Section B Monday Wednesday, 2:10 PM - 3:30 PM Room#yyy<br>
 
 <p><b>Course Schedule</b> <br>
 Week 1: Introduction, Logical Agents <a href="https://www.dropbox.com/s/gfuhzvp42xptyct/lecture01.pdf?dl=0">Lecture 1 Slide</a>  <br>
-Week 2: Logical Agents <br> 
+Week 2: Searching Agents <a href="https://www.dropbox.com/s/eu3tpzokmqyk9np/Searching%20Agents.pptx?dl=0">slides</a> <br> 
 Week 3: <b>Class Test 1</b> Searching Agents, Classical Search<br>
 Week 4: Classical Search, Incomplete Search <br>
 Week 5: Incomplete Search, Adverserial Search <b>Class test 2</b> <br>
