--- a/ai.html
+++ b/ai.html
@@ -35,7 +35,7 @@ Class Test Sample Questions <a href="https://www.dropbox.com/s/kiisfqods0naxg2/A
 <p><b>Course Schedule</b> <br>
 Week 1: Introduction, Logical Agents <a href="https://www.dropbox.com/s/gfuhzvp42xptyct/lecture01.pdf?dl=0">Lecture 1 Slide</a>  <br>
 Week 2: Searching Agents <a href="https://www.dropbox.com/s/eu3tpzokmqyk9np/Searching%20Agents.pptx?dl=0">slides</a> <br> 
-Week 3: <b>Class Test 1</b> Searching Agents, Classical Search<br>
+Week 3: <b>Class Test 1</b> Searching Agents, Classical Search<a href="https://www.dropbox.com/s/wp8g5j77jxxh66y/Informed%20Search.pptx?dl=0">Informed Search Slides</a><br>
 Week 4: Classical Search, Incomplete Search <br>
 Week 5: Incomplete Search, Adverserial Search <b>Class test 2</b> <br>
 Week 6: Adverserial Search <br>
