--- a/ailab.html
+++ b/ailab.html
@@ -26,6 +26,11 @@ Section C Wednesday, 11:20 AM - 2:00 PM CL#5<br>
 2. Project (presentation+report) - 35%<br> 
 3. Class Performance and Homeworks - 55%<br>
 
+<p>Marks
+
+Section A <a href="https://docs.google.com/spreadsheets/d/1MV0VUTyW0qk8_GYkFnqnF8_vtFWnCftyA_EjQiZLGUU/">marks</a> <br>
+Section B <a href="https://docs.google.com/spreadsheets/d/17n3BYRorJndTCdoBxr0nJd5-fIFSbGa_x_-5Ih9CL9M/">marks</a>
+
 <p><b>Plagiarism Policy</b><br>
 Please do not copy assignments. If you have such intentions, please drop the course now. Otherwise, you risk to fail in the course.
 
