--- a/ailab.html
+++ b/ailab.html
@@ -26,8 +26,7 @@ Section C Wednesday, 11:20 AM - 2:00 PM CL#5<br>
 2. Project (presentation+report) - 35%<br> 
 3. Class Performance and Homeworks - 55%<br>
 
-<p>Marks
-
+<p><b>Marks</b><br>
 Section A <a href="https://docs.google.com/spreadsheets/d/1MV0VUTyW0qk8_GYkFnqnF8_vtFWnCftyA_EjQiZLGUU/">marks</a> <br>
 Section B <a href="https://docs.google.com/spreadsheets/d/17n3BYRorJndTCdoBxr0nJd5-fIFSbGa_x_-5Ih9CL9M/">marks</a>
 
