--- a/ai.html
+++ b/ai.html
@@ -37,8 +37,8 @@ Week 1: Introduction, Logical Agents <a href="https://www.dropbox.com/s/gfuhzvp4
 Week 2: Searching Agents <a href="https://www.dropbox.com/s/eu3tpzokmqyk9np/Searching%20Agents.pptx?dl=0">slides</a> <br> 
 Week 3: <b>Class Test 1</b> Searching Agents, Classical Search<a href="https://www.dropbox.com/s/wp8g5j77jxxh66y/Informed%20Search.pptx?dl=0">Informed Search Slides</a><br>
 Week 4: Classical Search, Incomplete Search <br>
-Week 5: Incomplete Search, Adverserial Search <b>Class test 2</b> <br>
-Week 6: Adverserial Search <br>
+Week 5: Incomplete Search, Adverserial Search <b>Class test 2</b>  <br>
+Week 6: Adverserial Search <a href="https://www.dropbox.com/s/by13p4dpoxaen21/Lecture%206%20--%20Adversarial%20Search.pptx?dl=0"> slides </a> <br> <br>
 Week 7: Probabilistic Agents <br>
 Week 8: Naive Bayesian Classifier, <b>Class Test 3</b><br>
 Week 9: Bayesian Networks <br>
