--- a/ai.html
+++ b/ai.html
@@ -32,6 +32,10 @@ Section B Monday Wednesday, 2:10 PM - 3:30 PM Room#yyy<br>
 
 Class Test Sample Questions <a href="https://www.dropbox.com/s/kiisfqods0naxg2/AICT.zip?dl=0">Fall 2016</a> <a href="https://www.dropbox.com/s/ttcub60uyzr2fw5/ct.zip?dl=0">Summer 2015</a> 
 
+
+<br>
+Mid Sample Questions <a href="https://www.dropbox.com/s/06jmnga0u542scw/mid%20questions.zip?dl=0">zip download</a>
+<br>
 <p><b>Course Schedule</b> <br>
 Week 1: Introduction, Logical Agents <a href="https://www.dropbox.com/s/gfuhzvp42xptyct/lecture01.pdf?dl=0">Lecture 1 Slide</a>  <br>
 Week 2: Searching Agents <a href="https://www.dropbox.com/s/eu3tpzokmqyk9np/Searching%20Agents.pptx?dl=0">slides</a> <br> 
