--- a/ai.html
+++ b/ai.html
@@ -30,7 +30,7 @@ Section B Monday Wednesday, 2:10 PM - 3:30 PM Room#yyy<br>
 4. Mid Exam - 30%<br>
 5. Final Exam - 40%<br>
 
-Class Test Sample Questions <a href="https://www.dropbox.com/s/kiisfqods0naxg2/AICT.zip?dl=0">Fall 2016</a> <a href="https://www.dropbox.com/s/ttcub60uyzr2fw5/ct.zip?dl=0">Summer 2015</a> 
+Class Test Sample Questions <a href="https://www.dropbox.com/s/kiisfqods0naxg2/AICT.zip?dl=0">Fall 2016</a> <a href="https://www.dropbox.com/s/ttcub60uyzr2fw5/ct.zip?dl=0">Summer 2015</a> <a href="https://www.dropbox.com/s/3n7329j8un9ruv2/Spring%202017ct.zip?dl=0">Spring 2017</a>
 
 
 <br>
