--- a/ds.html
+++ b/ds.html
@@ -5,7 +5,16 @@
 
 <p><b>Fall 2019</b></p>
 
+<h3> Slides</h3>
+<a href="https://www.dropbox.com/s/tqfuasjaug2jzlk/Data%20Science.pptx?dl=0">Link</a>
 
+
+<h3> Codes</h3>
+<a href="https://www.dropbox.com/sh/3ads5j3r6p130or/AADeEgqobYnqM5_V7xmmroQSa?dl=0">Link</a>
+
+<h3> Papers</h3>
+
+<a href="https://www.dropbox.com/sh/d5k59fs59mcv9g7/AAC184cfscY8dsKqoB9koVy0a?dl=0">Link</a>
 
 
 </body>
