--- a/finance.html
+++ b/finance.html
@@ -12,25 +12,28 @@ Department of CSE, United International University <br>
 Room: 412 Email: swakkhar@cse.uiu.ac.bd Phone: 01776195310<br>
 <p>
 <b>Class Time</b><br>
-Saturday, 11:40 AM - 2:10 PM Computer Lab 10 Room # 530
+Saturday, 8:30 AM - 11:00 AM Computer Lab 14 Room # 426
 <br>
 
 <p><b>Books</b><br>
 
+<p><b>Lectures</b><br>
+Running Lectures <a href="https://www.dropbox.com/s/i6vwyli4uvp4k9u/finance.pdf?dl=0
+">Link</a>
 
 <p><b>Course Schedule</b> <br>
 Week 1: Introduction <br>
-Week 2: Exploratory Data Analysis <br>
-Week 3: Linear Regression <br>
-Week 4: Multiple Linear Regression <br>
-Week 5: Logistic Regression <br>
-Week 6: Artificial Neural Network <br>
+Week 2: Graphical Models - I  <br>
+Week 3: Graphical Models - II <br>
+Week 4: Graphical Models - III<br>
+Week 5: Exploratory Data Analysis <br>
+Week 6: Linear Regression <br>
 Mid Exam Week <br>
-Week 7: RNN and LSTM <br>
+Week 7: Multiple Linear Regression <br>
 Week 8: Time Series Analysis <br>
-Week 9: Graphical Models - I  <br>
-Week 10: Graphical Models - II <br>
-Week 11: Graphical Models - III<br>
+Week 9: Logistic Regression <br>
+Week 10: Artificial Neural Network <br>
+Week 11: RNN and LSTM <br>
 Week 12: Final Week Review <br>
 Final Exam: <br>
 <p><b>Topics Selected as Project</b><br>
