--- a/finance.html
+++ b/finance.html
@@ -16,6 +16,7 @@ Saturday, 8:30 AM - 11:00 AM Computer Lab 14 Room # 426
 <br>
 
 <p><b>Books</b><br>
+Neapolitan, Richard E., and Xia Jiang. Probabilistic methods for financial and marketing informatics. <br>
 
 <p><b>Lectures</b><br>
 Running Lectures <a href="https://www.dropbox.com/s/i6vwyli4uvp4k9u/finance.pdf?dl=0
