--- a/finance.html
+++ b/finance.html
@@ -24,7 +24,7 @@ Running Lectures <a href="https://www.dropbox.com/s/i6vwyli4uvp4k9u/finance.pdf?
 
 <p><b>Course Schedule</b> <br>
 Week 1: Introduction <br>
-Week 2: Graphical Models - I  <br>
+Week 2: Graphical Models - I  <a href="https://www.dropbox.com/s/pk6n22w9vs5ysza/ffn-2013-iss7-heaton.pdf?dl=0">Paper to Read</a><br>
 Week 3: Graphical Models - II <br>
 Week 4: Graphical Models - III<br>
 Week 5: Exploratory Data Analysis <br>
