--- a/finance.html
+++ b/finance.html
@@ -19,8 +19,7 @@ Saturday, 8:30 AM - 11:00 AM Computer Lab 14 Room # 426
 Neapolitan, Richard E., and Xia Jiang. Probabilistic methods for financial and marketing informatics. <br>
 
 <p><b>Lectures</b><br>
-Running Lectures <a href="https://www.dropbox.com/s/fbs501352dep30y/finance.pdf?dl=0
-">Link</a>
+Running Lectures <a href="finance.pdf">Link</a>
 
 <p><b>Course Schedule</b> <br>
 Week 1: Introduction <br>
