--- a/finance.html
+++ b/finance.html
@@ -26,7 +26,7 @@ Week 1: Introduction <br>
 Week 2: Graphical Models - I  <a href="https://www.dropbox.com/s/pk6n22w9vs5ysza/ffn-2013-iss7-heaton.pdf?dl=0">Paper to Read</a><br>
 Week 3: Graphical Models - II <br>
 Week 4: Graphical Models - III<br>
-Week 5: Exploratory Data Analysis <br>
+Week 5: Markov Models <a href="https://www.dropbox.com/s/5im4xq63jyyzmsc/Markov%20Models.pptx?dl=0">Slides</a> <br>
 Week 6: Linear Regression <br>
 Mid Exam Week <br>
 Week 7: Multiple Linear Regression <br>
