--- a/finance.html
+++ b/finance.html
@@ -31,7 +31,7 @@ Week 2: Graphical Models - I  <a href="https://www.dropbox.com/s/pk6n22w9vs5ysza
 Week 3: Graphical Models - II <br>
 Week 4: Graphical Models - III<br>
 Week 5: Markov Models <a href="https://www.dropbox.com/s/5im4xq63jyyzmsc/Markov%20Models.pptx?dl=0">Slides</a> <br>
-Week 6: Linear Regression <br>
+Week 6: Linear Regression <a href="https://www.dropbox.com/s/hwh5mm3qsgyntxf/linearregression.pdf?dl=0">slides</a><br>
 Mid Exam Week <br>
 Week 7: Multiple Linear Regression <br>
 Week 8: Time Series Analysis <br>
@@ -55,6 +55,12 @@ Link: <a href="https://www.overleaf.com/read/xmcdckpnpmms">Overleaf</a>
 
 <p> How to read a scientific paper? <a href="https://www.elsevier.com/connect/infographic-how-to-read-a-scientific-paper">infographic</a><br>
 <p><a href="https://www.dropbox.com/s/1ysdvyxx498660w/00.ten%20rules%20for%20literature%20review.pdf?dl=0">10 rules for literature review</a><br>
+
+A sample report <a href="https://www.dropbox.com/s/ff7uvn2l25ld75v/financial%20informatics_report.pdf?dl=0"> report.pdf </a>
+
+
+<p><b>Report Template</b>
+Link: <a href="https://www.overleaf.com/read/xmcdckpnpmms">Overleaf</a>
 
 
 </body>
