--- a/finance.html
+++ b/finance.html
@@ -29,9 +29,9 @@ Sample Questions for Mid Exam <a href="https://www.dropbox.com/s/xfm5lie74ccjaha
 Week 1: Introduction <br>
 Week 2: Graphical Models - I  <a href="https://www.dropbox.com/s/pk6n22w9vs5ysza/ffn-2013-iss7-heaton.pdf?dl=0">Paper to Read</a><br>
 Week 3: Graphical Models - II <br>
-Week 4: Graphical Models - III<br>
+Week 4: Graphical Models - III <a href="https://colab.research.google.com/drive/1uerxUq88iQyFy8LSOR_VF7evylXCmrFd">Code notebook<><br>
 Week 5: Markov Models <a href="https://www.dropbox.com/s/5im4xq63jyyzmsc/Markov%20Models.pptx?dl=0">Slides</a> <br>
-Week 6: Linear Regression <a href="https://www.dropbox.com/s/hwh5mm3qsgyntxf/linearregression.pdf?dl=0">slides</a><br>
+Week 6: Linear Regression <a href="https://www.dropbox.com/s/hwh5mm3qsgyntxf/linearregression.pdf?dl=0">slides</a> <a href="https://colab.research.google.com/drive/1ib4YLT5oqL1ri41miXct95H3bFSE8Sma">Notebook</a><br>
 Mid Exam Week <br>
 Week 7: Multiple Linear Regression <br>
 Week 8: Time Series Analysis <br>
