logistic regression added

--- a/finance.html
+++ b/finance.html
@@ -33,12 +33,10 @@ Week 4: Graphical Models - III <a href="https://colab.research.google.com/drive/
 Week 5: Markov Models <a href="https://www.dropbox.com/s/5im4xq63jyyzmsc/Markov%20Models.pptx?dl=0">Slides</a> <br>
 Mid Exam Week <br>
 Week 6: Linear Regression <a href="https://www.dropbox.com/s/hwh5mm3qsgyntxf/linearregression.pdf?dl=0">slides</a> <a href="https://colab.research.google.com/drive/1ib4YLT5oqL1ri41miXct95H3bFSE8Sma">Notebook</a><br>
-Week 7: Multiple Linear Regression <br>
-Week 8: Logistic Regression <br>
-Week 9: Artificial Neural Network <br>
-Week 10: Time Series Analysis <br>
-Week 11: RNN and LSTM <br>
-Week 12: Final Week Review <br>
+Week 7: Logistic Regression <a href="https://www.dropbox.com/s/unmvetvmjtbj905/Logistic%20Regression.pptx?dl=0">Audio Embedded Slides <a/>  <a href="https://colab.research.google.com/drive/1l4elDzd4hi5THis8Q-VZNT2U4dhboDbS">Colab Notebook</a><br>
+Week 8: Artificial Neural Network <br>
+Week 9: Time Series Analysis <br>
+Week 10: RNN and LSTM <br>
 Final Exam: <br>
 <p><b>Topics Selected as Project</b><br>
 
