logistic regression added

--- a/finance.html
+++ b/finance.html
@@ -49,6 +49,14 @@ Link: <a href="https://www.overleaf.com/read/xmcdckpnpmms">Overleaf</a>
 3. Mid Exam 30% <br> 
 4. Final Exam - 40%<br>
 
+<p> <b>Assignment</b><br>
+<a href="https://www.dropbox.com/s/2bo2gx2bcc2140g/Assignment01.pdf?dl=0"></a>
+1. Paper 1 <a href="https://www.dropbox.com/s/gz739s3xvl5xj29/Paper%20-%20I%20.pdf?dl=0">link</a><br>
+2. Paper 2 <a href="https://www.dropbox.com/s/gtv387lhhbpmkl2/Paper%20-%20II.pdf?dl=0">link</a><br>
+
+<b>Submission Deadline: May 30, 2020 </b> <br>
+
+
 
 
 <p> How to read a scientific paper? <a href="https://www.elsevier.com/connect/infographic-how-to-read-a-scientific-paper">infographic</a><br>
