logistic regression added

--- a/finance.html
+++ b/finance.html
@@ -57,6 +57,13 @@ Link: <a href="https://www.overleaf.com/read/xmcdckpnpmms">Overleaf</a>
 <b>Submission Deadline: May 30, 2020 </b> <br>
 
 
+<p> <b> Alternate Project </b><br>
+
+Read 5 recent papers on any of  the following topics and write 200 words summary on each of them. All papers must be from 2016-2020<br>
+1. Application of Neural Networks in Financial Time Series Data
+2. Application of Bayesian Networks in Financial Decision Making
+
+
 
 
 <p> How to read a scientific paper? <a href="https://www.elsevier.com/connect/infographic-how-to-read-a-scientific-paper">infographic</a><br>
