--- a/finance.html
+++ b/finance.html
@@ -60,8 +60,8 @@ Link: <a href="https://www.overleaf.com/read/xmcdckpnpmms">Overleaf</a>
 <p> <b> Alternate Project </b><br>
 
 Read 5 recent papers on any of  the following topics and write 200 words summary on each of them. All papers must be from 2016-2020<br>
-1. Application of Neural Networks in Financial Time Series Data
-2. Application of Bayesian Networks in Financial Decision Making
+1. Application of Neural Networks in Financial Time Series Data <br>
+2. Application of Bayesian Networks in Financial Decision Making <br>
 
 
 
