logistic regression added

--- a/finance.html
+++ b/finance.html
@@ -34,7 +34,9 @@ Week 5: Markov Models <a href="https://www.dropbox.com/s/5im4xq63jyyzmsc/Markov%
 Mid Exam Week <br>
 Week 6: Linear Regression <a href="https://www.dropbox.com/s/hwh5mm3qsgyntxf/linearregression.pdf?dl=0">slides</a> <a href="https://colab.research.google.com/drive/1ib4YLT5oqL1ri41miXct95H3bFSE8Sma">Notebook</a><br>
 Week 7: Logistic Regression <a href="https://www.dropbox.com/s/unmvetvmjtbj905/Logistic%20Regression.pptx?dl=0">Audio Embedded Slides <a/>  <a href="https://colab.research.google.com/drive/1l4elDzd4hi5THis8Q-VZNT2U4dhboDbS">Colab Notebook</a><br>
-Week 8: Artificial Neural Network <br>
+Week 8: Artificial Neural Network <a href="https://drive.google.com/open?id=1Jf20d5zN45oq0OFipBe14qTX3e85kn_r">Lecture Notes</a> <br>
+
+<a href="https://colab.research.google.com/drive/1HtkGV7JTMokoOd8bLt_2UVDbOKmobS78">Simple NN</a> <a href="https://colab.research.google.com/drive/16DR-SsVIwiFFmOF1M-xYWoHZjCJ8pr9B">Keras XOR</a> <a href="https://colab.research.google.com/drive/17vJnZDfzdCGvBuQrEjTDWpKKNQGSlhB2">Hello MNIST</a> <br>
 Week 9: Time Series Analysis <br>
 Week 10: RNN and LSTM <br>
 Final Exam: <br>
@@ -43,6 +45,8 @@ Final Exam: <br>
 <p><b>Report Template</b>
 Link: <a href="https://www.overleaf.com/read/xmcdckpnpmms">Overleaf</a>
 
+All video lectures: <a href="https://drive.google.com/drive/folders/1iK98MjE8dVNfBfR2YrDF7M3ED2gsdRSK?usp=sharing">folder</a>
+
 <p><b>Grading</b><br>
 1. Class Attendance - 10%<br>
 2. Assignments and Class Tests - 20% <br>
@@ -50,7 +54,9 @@ Link: <a href="https://www.overleaf.com/read/xmcdckpnpmms">Overleaf</a>
 4. Final Exam - 40%<br>
 
 <p> <b>Assignment</b><br>
-<a href="https://www.dropbox.com/s/2bo2gx2bcc2140g/Assignment01.pdf?dl=0"></a>
+
+Assignment Link <a href="https://www.dropbox.com/s/2bo2gx2bcc2140g/Assignment01.pdf?dl=0"></a> <br>
+
 1. Paper 1 <a href="https://www.dropbox.com/s/gz739s3xvl5xj29/Paper%20-%20I%20.pdf?dl=0">link</a><br>
 2. Paper 2 <a href="https://www.dropbox.com/s/gtv387lhhbpmkl2/Paper%20-%20II.pdf?dl=0">link</a><br>
 
