logistic regression added

--- a/finance.html
+++ b/finance.html
@@ -55,7 +55,7 @@ All video lectures: <a href="https://drive.google.com/drive/folders/1iK98MjE8dVN
 
 <p> <b>Assignment</b><br>
 
-Assignment Link <a href="https://www.dropbox.com/s/2bo2gx2bcc2140g/Assignment01.pdf?dl=0"></a> <br>
+Assignment Link <a href="https://www.dropbox.com/s/2bo2gx2bcc2140g/Assignment01.pdf?dl=0"> See </a> <br>
 
 1. Paper 1 <a href="https://www.dropbox.com/s/gz739s3xvl5xj29/Paper%20-%20I%20.pdf?dl=0">link</a><br>
 2. Paper 2 <a href="https://www.dropbox.com/s/gtv387lhhbpmkl2/Paper%20-%20II.pdf?dl=0">link</a><br>
