--- a/finance.html
+++ b/finance.html
@@ -37,8 +37,8 @@ Week 7: Logistic Regression <a href="https://www.dropbox.com/s/unmvetvmjtbj905/L
 Week 8: Artificial Neural Network <a href="https://drive.google.com/open?id=1Jf20d5zN45oq0OFipBe14qTX3e85kn_r">Lecture Notes</a> <br>
 
 <a href="https://colab.research.google.com/drive/1HtkGV7JTMokoOd8bLt_2UVDbOKmobS78">Simple NN</a> <a href="https://colab.research.google.com/drive/16DR-SsVIwiFFmOF1M-xYWoHZjCJ8pr9B">Keras XOR</a> <a href="https://colab.research.google.com/drive/17vJnZDfzdCGvBuQrEjTDWpKKNQGSlhB2">Hello MNIST</a> <br>
-Week 9: Time Series Analysis <br>
-Week 10: RNN and LSTM <br>
+Week 9: Time Series Analysis <a href="https://colab.research.google.com/github/tensorflow/docs/blob/master/site/en/tutorials/structured_data/time_series.ipynb">Code</a> <br>
+Week 10: RNN and LSTM <a href="https://docs.google.com/presentation/d/1UHXrKL1oTdgMLoAHHPfMM_srDO0BCyJXPmhe4DNh_G8/pub?start=false&loop=false&delayms=3000#slide=id.g24de73a70b_0_0">slides</a> <a href="https://towardsdatascience.com/lecture-evolution-from-vanilla-rnn-to-gru-lstms-58688f1da83a">video</a><br>
 Final Exam: <br>
 <p><b>Topics Selected as Project</b><br>
 
