--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <html>
+<head>
+  <title>Swakkhar Shatabda</title>
+</head>
 <body>
 
 <h1>Swakkhar Shatabda</h1>
 
+ <img src="https://sites.google.com/site/sshatabda/_/rsrc/1468863687099/home/IMG_3071-copy1-295x300.jpg">My Photo</img>
   
   Hello World!
 </body>
