--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
 </head>
 <body>
 
-<h1>Swakkhar Shatabda</h1>
 
- <img src="https://sites.google.com/site/sshatabda/_/rsrc/1468863687099/home/IMG_3071-copy1-295x300.jpg">My Photo</img>
+ <img src="https://sites.google.com/site/sshatabda/_/rsrc/1468863687099/home/IMG_3071-copy1-295x300.jpg" height="300"></img>
   
-  Hello World!
+ Swakkhar Shatabda<br>
+ Associate Professor<br>
+ Department of Computer Sciecne and Engineering<br>
+ United International University<br>
+ Email: swakkhar@cse.uiu.ac.bd
+  
+ 
 </body>
 </html> 
 
