--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
 
 
- <img src="https://sites.google.com/site/sshatabda/_/rsrc/1468863687099/home/IMG_3071-copy1-295x300.jpg" height="300"></img><br>
+ <img src="img.jpeg" height="200"></img><br>
   
  Swakkhar Shatabda<br>
  Associate Professor<br>
