--- a/index.html
+++ b/index.html
@@ -9,9 +9,16 @@
   
  Swakkhar Shatabda<br>
  Associate Professor<br>
- Department of Computer Sciecne and Engineering<br>
+ Department of Computer Science and Engineering<br>
  United International University<br>
  Email: swakkhar@cse.uiu.ac.bd
+<hr class="solid">
+<h3>A few Project Ideas</h3>
+<ol>
+  <li>Using Denoising Diffusion Probability Models for Generating Synthetic Data</li>
+  <li>Using Conference Paper Submission Data to Generate Meta-Review and Decision</li>
+ </ol>
+
   
  
 </body>
