--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <ol>
   <li>Using Denoising Diffusion Probability Models for Generating Synthetic Data</li>
   <li>Using Conference Paper Submission Data to Generate Meta-Review and Decision</li>
+  <li>Handling data imbalance in regression problems</li>>
  </ol>
 
   
