--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
  United International University<br>
  Email: swakkhar@cse.uiu.ac.bd
 <hr class="solid">
+<h3>Education</h3>
+PhD, Griffith University<br>
+BSc, Bangladesh University of Engineering and Technology
+
 <h3>A few Project Ideas</h3>
 <ol>
   <li>Using Denoising Diffusion Probability Models for Generating Synthetic Data</li>
