--- a/index.html
+++ b/index.html
@@ -17,6 +17,20 @@
 PhD, Griffith University<br>
 BSc, Bangladesh University of Engineering and Technology
 
+<h3>Research Interests</h3>
+Computational Biology, AI Search and Metaheuristics, Machine Intelligence
+
+<hr class="solid">
+<h3>Publications</h3>
+<h4>Journal Articles</h4>
+<ol>
+	<li>...</li>
+	</ol>
+<h4>Peer Reviewed Conference Papers</h4>
+<ol>
+	<li>...</li>
+	</ol>
+<hr class="solid">
 <h3>A few Project Ideas</h3>
 <ol>
   <li>Using Denoising Diffusion Probability Models for Generating Synthetic Data</li>
