--- a/index.html
+++ b/index.html
@@ -24,11 +24,15 @@ Computational Biology, AI Search and Metaheuristics, Machine Intelligence
 <h3>Publications</h3>
 <h4>Journal Articles</h4>
 <ol>
-	<li>...</li>
+	<li>Tabassum, Shaira, Sabbir Ullah, Nakib Hossain Al-Nur, and <b>Swakkhar Shatabda</b>.<i> "Poribohon-BD: Bangladeshi local vehicle image dataset with annotation for classification."</i> Data in brief 33 (2020): 106465.</li>
 	</ol>
 <h4>Peer Reviewed Conference Papers</h4>
 <ol>
-	<li>...</li>
+	<li>Mugdha, Shafayat Bin Shabbir, Marian Binte Mohammed Mainuddin Kuddus, Lubaba Salsabil, Afra Anika, Piya Prue Marma, Zahid Hossain, and <b>Swakkhar Shatabda</b>. <i>"A Gaussian Naive Bayesian Classifier for Fake News Detection in Bengali."</i> In Emerging Technologies in Data Mining and Information Security: Proceedings of IEMIS 2020, Volume 2, pp. 283-291. Springer Singapore, 2021.</li>
+	<li>Azad, Md Abulkalam, Sadia Islam, Dewan Md Farid, and <b>Swakkhar Shatabda</b>. <i>"Layered Ensemble Learning for Effective Binary Classification."</i> In Emerging Technologies in Data Mining and Information Security: Proceedings of IEMIS 2020, Volume 3, pp. 1-9. Springer Singapore, 2021.</li>
+
+	<li>Hossain, Mohammad Akter, Mubtasim Islam Sabik, Md Moshiur Rahman, Shadikun Nahar Sakiba, AKM Muzahidul Islam, <b>Swakkhar Shatabda</b>, Salekul Islam, and Ashir Ahmed. <i>"An Effective Leukemia Prediction Technique Using Supervised Machine Learning Classification Algorithm."</i> In Proceedings of International Conference on Trends in Computational and Cognitive Engineering, pp. 219-229. Springer, Singapore, 2021.</li>
+
 	</ol>
 <hr class="solid">
 <h3>A few Project Ideas</h3>
