--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ Computational Biology, AI Search and Metaheuristics, Machine Intelligence
 <h3>Publications</h3>
 <h4>Journal Articles</h4>
 <ol>
+	<li>Rahman, Chowdhury Rafeed, Ruhul Amin, <b>Swakkhar Shatabda</b>, and Md Sadrul Islam Toaha. <i>"A convolution based computational approach towards DNA N6-methyladenine site identification and motif extraction in rice genome."</i> Scientific Reports 11, no. 1 (2021): 1-13.</li>
 	<li>Tabassum, Shaira, Sabbir Ullah, Nakib Hossain Al-Nur, and <b>Swakkhar Shatabda</b>.<i> "Poribohon-BD: Bangladeshi local vehicle image dataset with annotation for classification."</i> Data in brief 33 (2020): 106465.</li>
 	</ol>
 <h4>Peer Reviewed Conference Papers</h4>
