--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQUz6Q_W74AZaWqULKbd9fTySM7NJNvtc4uK68dopXmEOU2KsYBud5EDNv-1dWDPN8f-kU&usqp=CAU" height="200"></img><br>
   
  Swakkhar Shatabda<br>
- Associate Professor<br>
+ Professor<br>
  Department of Computer Science and Engineering<br>
+ Director, B.Sc. in Data Science Program,
  United International University<br>
  Email: swakkhar@cse.uiu.ac.bd
 <hr class="solid">
@@ -24,31 +25,12 @@ Computational Biology, AI Search and Metaheuristics, Machine Intelligence
 <h3>Publications</h3>
 <h4>Journal Articles</h4>
 <ol>
-	<li>Rahman, Chowdhury Rafeed, Ruhul Amin, <b>Swakkhar Shatabda</b>, and Md Sadrul Islam Toaha. <i>"A convolution based computational approach towards DNA N6-methyladenine site identification and motif extraction in rice genome."</i> Scientific Reports 11, no. 1 (2021): 1-13.</li>
-	<li>Tabassum, Shaira, Sabbir Ullah, Nakib Hossain Al-Nur, and <b>Swakkhar Shatabda</b>.<i> "Poribohon-BD: Bangladeshi local vehicle image dataset with annotation for classification."</i> Data in brief 33 (2020): 106465.</li>
-	<li>Dipta, Shubhashis Roy, Ghazaleh Taherzadeh, MD Wakil Ahmad, MD Easin Arafat, <b>Swakkhar Shatabda</b>, and Abdollah Dehzangi. "<i>SEMal: Accurate protein malonylation site predictor using structural and evolutionary information.</i>" Computers in Biology and Medicine 125 (2020): 104022.</li>
+	<li>Will be updated soon.</li>
 	</ol>
 <h4>Peer Reviewed Conference Papers</h4>
 <ol>
-	<li>Mugdha, Shafayat Bin Shabbir, Marian Binte Mohammed Mainuddin Kuddus, Lubaba Salsabil, Afra Anika, Piya Prue Marma, Zahid Hossain, and <b>Swakkhar Shatabda</b>. <i>"A Gaussian Naive Bayesian Classifier for Fake News Detection in Bengali."</i> In Emerging Technologies in Data Mining and Information Security: Proceedings of IEMIS 2020, Volume 2, pp. 283-291. Springer Singapore, 2021.</li>
-	<li>Azad, Md Abulkalam, Sadia Islam, Dewan Md Farid, and <b>Swakkhar Shatabda</b>. <i>"Layered Ensemble Learning for Effective Binary Classification."</i> In Emerging Technologies in Data Mining and Information Security: Proceedings of IEMIS 2020, Volume 3, pp. 1-9. Springer Singapore, 2021.</li>
-
-	<li>Hossain, Mohammad Akter, Mubtasim Islam Sabik, Md Moshiur Rahman, Shadikun Nahar Sakiba, AKM Muzahidul Islam, <b>Swakkhar Shatabda</b>, Salekul Islam, and Ashir Ahmed. <i>"An Effective Leukemia Prediction Technique Using Supervised Machine Learning Classification Algorithm."</i> In Proceedings of International Conference on Trends in Computational and Cognitive Engineering, pp. 219-229. Springer, Singapore, 2021.</li>
-	<li>Khandokar, Iftakhar Ali, Imtiaz Mamun, Tasmia Ishrat Alam Chadni, Zubair Ahmed Anas, and <b>Swakkhar Shatabda.</b> <i>"Event Detection and Knowledge Mining from Unlabelled Bengali News Articles."</i> In 2020 Emerging Technology in Computing, Communication and Electronics (ETCCE), pp. 1-6. IEEE, 2020.</li>
-	<li>Ali, Mohammad, and <b>Swakkhar Shatabda.</b> "<i>A Data Selection Methodology to Train Linear Regression Model to Predict Bitcoin Price.</i>" In 2020 2nd International Conference on Advanced Information and Communication Technology (ICAICT), pp. 330-335. IEEE, 2020.</li>
-	<li>Tabassum, Shaira, Md Sabbir Ullah, Nakib Hossain Al-Nur, and <b>Swakkhar Shatabda</b>. "<i>Native Vehicles Classification on Bangladeshi Roads Using CNN with Transfer Learning.</i>" In 2020 IEEE Region 10 Symposium (TENSYMP), pp. 40-43. IEEE, 2020.</li>
-	<li>Ahmad, Md Wakil, Md Easin Arafat, S. M. Shovan, Mahtab Uddin, Omar Faruq Osama, and <b>Swakkhar Shatabda</b>. "<i>Enhanced prediction of lysine propionylation sites using Bi-peptide evolutionary features resolving data imbalance.</i>" In 2020 IEEE Region 10 Symposium (TENSYMP), pp. 1668-1671. IEEE, 2020.</li>
-
-	<li>Bhakta, Dip, Avimonnu Arnob Dash, Md Faisal Bari, and <b>Swakkhar Shatabda</b>. "<i>Supervised Machine Learning for Multi-label Classification of Bangla Articles.</i>" In International Conference on Cyber Security and Computer Science, pp. 477-487. Springer, Cham, 2020.</li>
-
-	<li>Nawshin, Sabila, Sarah Ahsin, Mohmmad Ali, Salekul Islam, and <b>Swakkhar Shatabda</b>. "<i>Voice-Enabled Intelligent IDE in Cloud.</i>" In Proceedings of International Joint Conference on Computational Intelligence, pp. 57-69. Springer, Singapore, 2020.</li>
-
-	<li>Khan, Sakib Shahriar, Shakim Ahamed, Miftahul Jannat, <b>Swakkhar Shatabda</b>, and Dewan Md Farid. "<i>Classification by clustering (cbc): An approach of classifying big data based on similarities.</i>" In Proceedings of International Joint Conference on Computational Intelligence, pp. 593-605. Springer, Singapore, 2020.</li>
-
-	<li>Ahmad, Md Wakil, S. M. Shovan, Md Easin Arafat, Md Habibur Rahman Sifat, Md Al Mehedi Hasan, and <b>Swakkhar Shatabda</b>. "<i>Improved performance of lysine glutarylation PTM using peptide evolutionary features.</i>" In 2019 3rd International Conference on Electrical, Computer & Telecommunication Engineering (ICECTE), pp. 197-200. IEEE, 2019.</li>
-	<li>Jahan, Maliha, Istiak Ahamed, Md Rayanuzzaman Bishwas, and <b>Swakkhar Shatabda</b>. "<i>Abusive Comments Detection in Bangla-English Code-mixed and Transliterated Text.</i>" In 2019 2nd International Conference on Innovation in Engineering and Technology (ICIET), pp. 1-6. IEEE, 2019.</li>
-	<li>Bari, Md, Tanvir Hassan, Raisa Tabassum, Zubaida Ahmed, and <b>Swakkhar Shatabda</b>. "<i>Find It: A Novel Way to Learn Through Play.</i>" International Joint Conference on Computational Intelligence (IJCCI 2018).</li>
-	<li></li>
+	
+	<li>Will be updated soon</li>
 	</ol>
 <hr class="solid">
 <h3>A few Project Ideas</h3>
