--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  Department of Computer Science and Engineering<br>
  Director, B.Sc. in Data Science Program,
  United International University<br>
- Email: swakkhar@cse.uiu.ac.bd
+ Email: sshatabda@gmail.com
 <hr class="solid">
 <h3>Education</h3>
 PhD, Griffith University<br>
