--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@ Computational Biology, AI Search and Metaheuristics, Machine Intelligence
 <h4>Peer Reviewed Conference Papers</h4>
 <ol>
 	
-	<li>Will be updated soon</li>
+	<li>
+Nusrat~Jahan Tithi and Swakkhar Shatabda. A convolutional neural network for goal recognition. In {\em 2023 26th International Conference on Computer and
+  Information Technology (ICCIT)}, pages 1--6. IEEE, 2023.</li>
+
+
 	</ol>
 <hr class="solid">
 <h3>A few Project Ideas</h3>
