--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@ Computational Biology, AI Search and Metaheuristics, Machine Intelligence
 <h4>Peer Reviewed Conference Papers</h4>
 <ol>
 	
-	<li>
-Nusrat~Jahan Tithi and Swakkhar Shatabda. A convolutional neural network for goal recognition. In {\em 2023 26th International Conference on Computer and
-  Information Technology (ICCIT)}, pages 1--6. IEEE, 2023.</li>
+	<li>Will be updated soon.</li>
 
 
 	</ol>
