--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
  Swakkhar Shatabda<br>
  Professor<br>
  Department of Computer Science and Engineering<br>
- Director, B.Sc. in Data Science Program,
- United International University<br>
+BRAC University<br>
  Email: sshatabda@gmail.com
 <hr class="solid">
 <h3>Education</h3>
