--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@ Computational Biology, AI Search and Metaheuristics, Machine Intelligence
   <li>Handling data imbalance in regression problems</li>
  </ol>
 
+<h3>Talks and Seminars</h3>
+<ol>
+  <li> "Artificial Intelligence for Multimodal Medical Data Analytics", 1st South-East Asian Regional Non-Communicable Diseases Conference, August 2024, South-East Asian NCD Alliance. </li>
+  <li>"Harvesting Innovation: How AI is Reshaping Agro-Food Operations", Workshop on Postharvest Processing Technology for Food and Nutritional Security, May 2024, Bangladesh Agricultural Research Council (BARC)</li>
+ </ol>
+
   
  
 </body>
