--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@ Computational Biology, AI Search and Metaheuristics, Machine Intelligence
 
 <h3>Talks and Seminars</h3>
 <ol>
+   <li> "Artificial Intelligence and Blockchain for Information Scrutiny and Authenticity", 5th Blockchain Olympiad Bangladesh, September 2024, BCOLBD </li>
   <li> "Artificial Intelligence for Multimodal Medical Data Analytics", 1st South-East Asian Regional Non-Communicable Diseases Conference, August 2024, South-East Asian NCD Alliance. </li>
   <li>"Harvesting Innovation: How AI is Reshaping Agro-Food Operations", Workshop on Postharvest Processing Technology for Food and Nutritional Security, May 2024, Bangladesh Agricultural Research Council (BARC)</li>
  </ol>
